Deployment/client.yaml
﻿apiVersion: v1
kind: Service
metadata:
  name: dataharbor-client
spec:
  selector:
    app: dataharbor-client
  ports:
    - port: 4200
      targetPort: 8000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataharbor-client
spec:
  selector:
    matchLabels:
      app: dataharbor-client
  template:
     metadata:
       labels:
         app: dataharbor-client
     spec:
       containers:
         - name: dataharbor-client
           image: pank05081985/dataharbor-client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataharbor-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: dataharbor.local
      http:
        paths:
          - path: /client(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dataharbor-client
                port:
                  number: 8000
